--- a/.github/workflows/compile-test.yml
+++ b/.github/workflows/compile-test.yml
@@ -250,8 +250,15 @@ jobs:
           path: |
             ${{ steps.yarn-cache-dir-path.outputs.dir }}
             **/node_modules
-            ~/.cache/ms-playwright
           key: vivid-cache-yarn-${{ hashFiles('**/package.json') }}
+
+      - name: Cache playwright binaries
+        uses: actions/cache@v2
+        id: playwright-cache
+        with:
+          path: |
+            ~/Library/Caches/ms-playwright
+          key: vivid-cache-playwright
 
       - name: Install packages
         if: steps.yarn-cache.outputs.cache-hit != 'true'
@@ -262,16 +269,12 @@ jobs:
         run: yarn install
 
       - name: Install playwright deps
-        if: steps.yarn-cache.outputs.cache-hit != 'true'
+        if: steps.playwright-cache.outputs.cache-hit != 'true'
         env:
           yarn_always_auth: true,
           yarn__auth: ${{ secrets.ARTIFACTORY_AUTH_TOKEN }}
           yarn_registry: "https://vonagecc.jfrog.io/vonagecc/api/npm/npm/"
         run: yarn add playwright -D -W && yarn playwright install-deps
-
-      - name: Use playwright cache for MacOS
-        if: steps.yarn-cache.outputs.cache-hit == 'true'
-        run: mv ~/.cache/ms-playwright ~/Library/Caches/ms-playwright
 
       - name: Cache build
         uses: actions/cache@v2
