--- a/.github/workflows/compile-test.yml
+++ b/.github/workflows/compile-test.yml
@@ -42,10 +42,12 @@ jobs:
           - ChromeHeadless
           - SafariNative
         exclude:
+          - os: ubuntu-20.04
+            browser: SafariNative
           - os: macos-latest
-            browser:
-              - FirefoxHeadless
-              - ChromeHeadless
+            browser: FirefoxHeadless
+          - os: macos-latest
+            browser: ChromeHeadless
     steps:
       - uses: actions/download-artifact@v2
         with:
