--- a/.github/workflows/compile-test.yml
+++ b/.github/workflows/compile-test.yml
@@ -13,6 +13,18 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
+      - name: Cache playwright binaries
+        uses: actions/cache@v2
+        id: playwright-cache
+        with:
+          path: |
+            ~/Library/Caches/ms-playwright
+          key: vivid-cache-playwright
+
+      - name: Show playwright contents
+        run: |
+          ls -R ~/Library/Caches/ms-playwright
+
       - name: Setup NodeJS 14
         uses: actions/setup-node@v2
         with:
