--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "storybook:vivid:pre": "yarn compile && yarn wca:json && node ./.storybook/build-scripts/build-pre.mjs",
     "storybook:vivid:post": "node ./.storybook/build-scripts/build-post.mjs",
     "storybook:build": "yarn storybook:vivid:pre && build-storybook -c .storybook -o .out -s ./.storybook/static && yarn storybook:vivid:post",
-		"storybook": "yarn wca:json && start-storybook -s ./.storybook/static -p 9000",
+    "storybook": "yarn wca:json && start-storybook -s ./.storybook/static -p 9000",
     "start": "yarn storybook:vivid:pre && start-storybook -s ./.storybook/static -p 9000",
     "build:design-tokens": "lerna run build --scope @vonage/vvd-design-tokens",
     "compile": "lerna run build --stream",
@@ -54,6 +54,10 @@
     "ui-tests": "yarn build-ui-tests && yarn run-ui-tests"
   },
   "devDependencies": {
+    "@nrwl/cli": "latest",
+    "@nrwl/nx-cloud": "latest",
+    "@nrwl/tao": "latest",
+    "@nrwl/workspace": "latest",
     "@open-wc/eslint-config": "^4.3.0",
     "@open-wc/karma-esm": "^4.0.0",
     "@open-wc/lit-helpers": "^0.3.12",
@@ -73,6 +77,7 @@
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
     "@vonage/monowatch": "^0.0.7",
+    "@vonage/vvd-design-tokens-properties": "^0.7.3",
     "@whitespace/storybook-addon-html": "^5.0.0",
     "chai": "^4.3.4",
     "chai-a11y-axe": "^1.3.1",
@@ -148,11 +153,7 @@
     "web-component-analyzer": "^1.1.6",
     "webpack-cli": "^4.7.0",
     "webpack-dev-server": "^4.0.0",
-    "xmlhttprequest-ssl": "^1.6.2",
-    "@nrwl/workspace": "latest",
-    "@nrwl/cli": "latest",
-    "@nrwl/tao": "latest",
-    "@nrwl/nx-cloud": "latest"
+    "xmlhttprequest-ssl": "^1.6.2"
   },
   "engines": {
     "node": ">=12.18.4"
