--- a/components/elevation/package.json
+++ b/components/elevation/package.json
@@ -26,9 +26,11 @@
 	},
 	"dependencies": {
 		"@vonage/vvd-foundation": "2.19.0",
-		"@vonage/vvd-umbrella": "2.19.0",
 		"@vonage/vvd-core": "2.19.0",
-		"lit-element": "^2.4.0",
+		"lit-element": "^2.4.0"
+	},
+	"devDependencies": {
+		"@vonage/vvd-umbrella": "2.19.0",
 		"tslib": "^2.3.0"
 	}
 }
