--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
 		"build:design-tokens": "lerna run build --scope @vonage/vvd-design-tokens",
 		"compile": "nx run-many --target=build --all --parallel=true",
 		"clean:hard": "git clean -e .npmrc -dfx",
-		"clean": "git clean -e .npmrc node_modules -df",
+		"clean": "git clean -xfd -e .npmrc -e node_modules",
 		"watch": "monowatch",
 		"wca:json": "wca analyze components/*/src/*.?s --outFile custom-elements.json",
 		"wca:compile:json": "yarn compile && yarn wca:custom-elements",
