--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
 		"changelog": "yarn lerna exec --concurrency 1 --stream 'conventional-changelog --preset angular --release-count 0 --commit-path $PWD --pkg $PWD/package.json --outfile $PWD/CHANGELOG.md --verbose'",
 		"lint:stylelint": "stylelint \"{common,components}/**/*.scss\" --quiet",
 		"lint:eslint": "eslint \"{common,components}/*/{src,test}/**/*.{js,ts}\" --no-error-on-unmatched-pattern --quiet",
-		"lint:lit": "lit-analyzer \"{common,components}/*/src/**/*.ts\" --rules.no-nullable-attribute-binding off --rules.no-missing-import warning --rules.no-incompatible-type-binding off --strict",
 		"lint": "yarn lint:stylelint && yarn lint:eslint && yarn lint:lit",
 		"format:stylelint": "yarn lint:stylelint --fix",
 		"format:eslint": "yarn lint:eslint --fix",
@@ -53,7 +52,6 @@
 		"ui-tests": "yarn build-ui-tests && yarn run-ui-tests"
 	},
 	"devDependencies": {
-		"@open-wc/eslint-config": "^5.0.0",
 		"@open-wc/karma-esm": "^4.0.0",
 		"@open-wc/lit-helpers": "^0.3.12",
 		"@open-wc/semantic-dom-diff": "^0.19.4",
@@ -69,8 +67,8 @@
 		"@storybook/theming": "^6.3.10",
 		"@storybook/web-components": "^6.3.10",
 		"@types/serve-handler": "^6.1.1",
-		"@typescript-eslint/eslint-plugin": "^5.0.0",
-		"@typescript-eslint/parser": "^5.0.0",
+		"@typescript-eslint/eslint-plugin": "^5.1.0",
+		"@typescript-eslint/parser": "^5.1.0",
 		"@vonage/monowatch": "^0.0.7",
 		"@whitespace/storybook-addon-html": "^5.0.0",
 		"chai": "^4.3.4",
@@ -93,8 +91,8 @@
 		"eslint": "8.0.0",
 		"eslint-plugin-compat": "^3.13.0",
 		"eslint-plugin-import": "^2.25.2",
-		"eslint-plugin-lit": "^1.6.0",
-		"eslint-plugin-lit-a11y": "^1.1.0",
+		"eslint-plugin-lit": "^1.6.1",
+		"eslint-plugin-lit-a11y": "^2.0.0",
 		"eslint-plugin-mocha": "^9.0.0",
 		"eslint-plugin-no-only-tests": "^2.6.0",
 		"eslint-plugin-wc": "^1.3.2",
@@ -120,7 +118,6 @@
 		"kefir": "^3.8.7",
 		"lerna": "^4.0.0",
 		"lint-staged": "^11.2.0",
-		"lit-analyzer": "^1.2.1",
 		"lodash": "^4.17.21",
 		"minimist": "^1.2.5",
 		"mocha": "^8.1.3",
@@ -139,10 +136,11 @@
 		"stylelint-config-sass-guidelines": "^8.0.0",
 		"stylelint-no-unsupported-browser-features": "^5.0.2",
 		"tar-stream": "^2.1.4",
+		"ts-lit-plugin": "^1.2.1",
 		"ts-loader": "^9.1.2",
 		"ts-node": "^9.1.1",
 		"tslib": "^2.3.0",
-		"typescript": "^4.4.3",
+		"typescript": "^4.4.4",
 		"uuid": "^8.3.2",
 		"web-component-analyzer": "^1.1.6",
 		"webpack-cli": "^4.7.0",
