--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
 		"changelog": "yarn lerna exec --concurrency 1 --stream 'conventional-changelog --preset angular --release-count 0 --commit-path $PWD --pkg $PWD/package.json --outfile $PWD/CHANGELOG.md --verbose'",
 		"lint:stylelint": "stylelint \"{common,components}/**/*.scss\" --quiet",
 		"lint:eslint": "eslint \"{common,components}/*/{src,test}/**/*.{js,ts}\" --no-error-on-unmatched-pattern --quiet",
-		"lint": "yarn lint:stylelint && yarn lint:eslint && yarn lint:lit",
+		"lint": "yarn lint:stylelint && yarn lint:eslint",
 		"format:stylelint": "yarn lint:stylelint --fix",
 		"format:eslint": "yarn lint:eslint --fix",
-		"format": "yarn format:stylelint && yarn format:eslint && yarn lint:lit",
+		"format": "yarn format:stylelint && yarn format:eslint",
 		"tsc:watch": "tsc --build --watch",
 		"test:prepublish": "karma start --coverage --browsers=ChromeHeadless,FirefoxHeadless",
 		"test:chrome": "karma start --coverage --browsers=ChromeHeadless",
@@ -88,7 +88,7 @@
 		"depcheck": "^1.4.2",
 		"element-f": "^2.0.0",
 		"es-dev-server": "^1.50.8",
-		"eslint": "8.0.0",
+		"eslint": "^8.0.1",
 		"eslint-plugin-compat": "^3.13.0",
 		"eslint-plugin-import": "^2.25.2",
 		"eslint-plugin-lit": "^1.6.1",
