--- a/components/banner/package.json
+++ b/components/banner/package.json
@@ -26,6 +26,7 @@
 		"url": "https://github.com/Vonage/vivid/issues"
 	},
 	"dependencies": {
+		"@material/mwc-snackbar": "^0.22.1",
 		"@vonage/vvd-core": "2.20.1",
 		"@vonage/vvd-foundation": "2.20.1",
 		"@vonage/vwc-icon": "2.20.1",
