--- a/components/side-drawer/package.json
+++ b/components/side-drawer/package.json
@@ -29,6 +29,8 @@
 		"@vonage/vvd-foundation": "2.22.0",
 		"lit-element": "^2.4.0",
 		"lit-html": "^1.3.0",
+		"blocking-elements": "^0.1.0",
+    "wicg-inert": "^3.0.0",
 		"tslib": "^2.3.0"
 	},
 	"devDependencies": {
