--- a/components/card/package.json
+++ b/components/card/package.json
@@ -18,7 +18,7 @@
 	},
 	"scripts": {
 		"build:typescript": "tsc -b",
-		"build:styles": "umbrella-style-modules",
+		"build:styles": "umbrella-style-modules --path=\"./src\"",
 		"build": "yarn run build:styles && yarn run build:typescript"
 	},
 	"bugs": {
