--- a/components/tooltip/package.json
+++ b/components/tooltip/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@vonage/vwc-tooltip",
 	"version": "2.22.1",
-	"description": "tooltip component",
+	"description": "Displays a tooltip",
 	"homepage": "https://github.com/Vonage/vivid/tree/master/components/tooltip#readme",
 	"license": "ISC",
 	"main": "vwc-tooltip.js",
@@ -17,8 +17,9 @@
 		"directory": "components/tooltip"
 	},
 	"scripts": {
+		"test": "echo \"Error: run tests from root\" && exit 1",
 		"build:typescript": "tsc -b",
-		"build:styles": "umbrella-style-modules --path=\"./src\"",
+		"build:styles": "umbrella-style-modules",
 		"build": "yarn run build:styles && yarn run build:typescript"
 	},
 	"bugs": {
@@ -27,14 +28,16 @@
 	"dependencies": {
 		"@vonage/vvd-core": "2.22.1",
 		"@vonage/vvd-foundation": "2.22.1",
-		"blocking-elements": "^0.1.0",
+		"@vonage/vwc-icon": "2.22.1",
+		"@vonage/vwc-icon-button": "2.22.1",
 		"lit-element": "^2.4.0",
-		"lit-html": "^1.3.0",
 		"tslib": "^2.3.0"
 	},
 	"devDependencies": {
 		"@vonage/vvd-design-tokens": "2.22.1",
 		"@vonage/vvd-typography": "2.22.1",
-		"@vonage/vvd-umbrella": "2.22.1"
+		"@vonage/vvd-umbrella": "2.22.1",
+		"lit-html": "^1.3.0",
+		"typescript": "^4.3.2"
 	}
 }
