--- a/components/tooltip/package.json
+++ b/components/tooltip/package.json
@@ -30,6 +30,7 @@
 		"@vonage/vvd-foundation": "2.22.1",
 		"@vonage/vwc-icon": "2.22.1",
 		"@vonage/vwc-icon-button": "2.22.1",
+		"@popperjs/core": "^2.7.0",
 		"lit-element": "^2.4.0",
 		"tslib": "^2.3.0"
 	},
