--- a/.github/workflows/lint-pr-title.yml
+++ b/.github/workflows/lint-pr-title.yml
@@ -1,15 +1,14 @@
 name: "Lint PR Title"
+
 on:
   pull_request:
-    types:
-      - opened
-      - edited
-      - synchronize
+    types: ['opened', 'edited', 'reopened', 'synchronize']
 
 jobs:
-  main:
+  lint:
     runs-on: ubuntu-latest
     steps:
-      - uses: dreampulse/action-lint-pull-request-title@master
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - uses: actions/checkout@v2
+    - name: Install Dependencies
+      run: npm install @commitlint/config-conventional
+    - uses: JulienKode/pull-request-name-linter-action@v0.2.0
