--- a/.github/workflows/lint-pr-title.yml
+++ b/.github/workflows/lint-pr-title.yml
@@ -9,6 +9,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+    - uses: actions/setup-node@v2
+      with:
+        node-version: '16'
+
     - name: Install Dependencies
       run: npm install @commitlint/config-conventional
     - uses: JulienKode/pull-request-name-linter-action@v0.2.0
