--- a/.github/workflows/lint-pr-title.yml
+++ b/.github/workflows/lint-pr-title.yml
@@ -14,5 +14,5 @@ jobs:
         node-version: '16'
 
     - name: Install Dependencies
-      run: npm install @commitlint/config-conventional
+      run: npm install --no-save @commitlint/config-conventional
     - uses: JulienKode/pull-request-name-linter-action@v0.2.0
