--- a/.github/workflows/lint-pr-title.yml
+++ b/.github/workflows/lint-pr-title.yml
@@ -7,8 +7,12 @@ on:
 jobs:
   lint:
     runs-on: ubuntu-latest
+    env:
+      GITHUB_TOKEN: ${{ secrets.VNG_VIVID_PAT }}
     steps:
     - uses: actions/checkout@v2
+    - run: printf "registry=https://npm.pkg.github.com/Vonage\n_authToken=\${GITHUB_TOKEN}\n//npm.pkg.github.com/:_authToken=\${GITHUB_TOKEN}\nalways-auth=true" > .npmrc
     - name: Install Dependencies
       run: yarn add -W @commitlint/config-conventional
+    - name: Check PR Title
     - uses: JulienKode/pull-request-name-linter-action@v0.2.0
