--- a/.github/workflows/project-automations.yml
+++ b/.github/workflows/project-automations.yml
@@ -1,4 +1,5 @@
 name: Project automations
+
 on:
   issues:
     types:
@@ -9,9 +10,15 @@ on:
     types:
       - opened
       - ready_for_review
+      - converted_to_draft
       - reopened
       - review_requested
       - closed
+
+concurrency:
+  group: ci-project-automation-${{ github.ref }}-1
+  cancel-in-progress: true
+
 jobs:
   issue_opened_and_reopened:
     name: issue_opened_and_reopened
@@ -21,7 +28,7 @@ jobs:
       - name: 'Move issue to "Todo 🕓"'
         uses: leonsteinhaeuser/project-beta-automations@v1.0.2
         with:
-          gh_token: ${{ secrets.VNG_VIVID_PAT }}
+          gh_token: ${{ secrets.VNG_VVD_PAT }}
           organization: vonage
           project_id: 3
           resource_node_id: ${{ github.event.issue.node_id }}
@@ -34,7 +41,7 @@ jobs:
       - name: 'Moved issue to "Done ✅"'
         uses: leonsteinhaeuser/project-beta-automations@v1.0.2
         with:
-          gh_token: ${{ secrets.VNG_VIVID_PAT }}
+          gh_token: ${{ secrets.VNG_VVD_PAT }}
           organization: vonage
           project_id: 3
           resource_node_id: ${{ github.event.issue.node_id }}
@@ -47,7 +54,7 @@ jobs:
       - name: 'Move PR to "In Progress 🚧"'
         uses: leonsteinhaeuser/project-beta-automations@v1.0.2
         with:
-          gh_token: ${{ secrets.VNG_VIVID_PAT }}
+          gh_token: ${{ secrets.VNG_VVD_PAT }}
           organization: vonage
           project_id: 3
           resource_node_id: ${{ github.event.pull_request.node_id }}
@@ -60,20 +67,33 @@ jobs:
       - name: 'Move PR to "Needs Review 🔎"'
         uses: leonsteinhaeuser/project-beta-automations@v1.0.2
         with:
-          gh_token: ${{ secrets.VNG_VIVID_PAT }}
+          gh_token: ${{ secrets.VNG_VVD_PAT }}
           organization: vonage
           project_id: 3
           resource_node_id: ${{ github.event.pull_request.node_id }}
           status_value: "Needs Review 🔎"
+
+  pr_converted_to_draft:
+    runs-on: ubuntu-latest
+    if: github.event_name == 'pull_request' && github.event.action == 'converted_to_draft'
+    steps:
+      - name: 'Move PR to "In Progress 🚧"'
+        uses: leonsteinhaeuser/project-beta-automations@v1.0.2
+        with:
+          gh_token: ${{ secrets.VNG_VVD_PAT }}
+          organization: vonage
+          project_id: 3
+          resource_node_id: ${{ github.event.pull_request.node_id }}
+          status_value: "In Progress 🚧"
+
   pr_closed:
-    name: pr_closed
     runs-on: ubuntu-latest
     if: github.event_name == 'pull_request' && github.event.action == 'closed'
     steps:
       - name: 'Move PR to "Done ✅"'
         uses: leonsteinhaeuser/project-beta-automations@v1.0.2
         with:
-          gh_token: ${{ secrets.VNG_VIVID_PAT }}
+          gh_token: ${{ secrets.VNG_VVD_PAT }}
           organization: vonage
           project_id: 3
           resource_node_id: ${{ github.event.pull_request.node_id }}
