--- a/.github/workflows/deploy-showcase-dev-s3.yml
+++ b/.github/workflows/deploy-showcase-dev-s3.yml
@@ -12,7 +12,7 @@ jobs:
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID_B }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY_SECRET_B }}
-      GITHUB_TOKEN: ${{ secrets.VNG_VIVID_PAT }}
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     steps:
       - name: Checkout
