--- a/.github/workflows/pull-request-master.yml
+++ b/.github/workflows/pull-request-master.yml
@@ -25,6 +25,8 @@ jobs:
       GITHUB_TOKEN: ${{ secrets.VNG_VVD_PAT }}
     steps:
       - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
       - uses: actions/setup-node@v2
         with:
           node-version: 14
