--- a/.github/workflows/release-prepare.yml
+++ b/.github/workflows/release-prepare.yml
@@ -18,6 +18,7 @@ jobs:
         with:
           fetch-depth: 0
           ref: master
+          token: ${{ secrets.VNG_VVD_PAT }}
 
       - name: Writing .npmrc
         run: printf "registry=https://npm.pkg.github.com/Vonage\n_authToken=\${GITHUB_TOKEN}\n//npm.pkg.github.com/:_authToken=\${GITHUB_TOKEN}\nalways-auth=true" > .npmrc
