--- a/components/popup/package.json
+++ b/components/popup/package.json
@@ -32,7 +32,9 @@
 		"@vonage/vwc-icon": "2.22.1",
 		"lit-element": "^2.4.0",
 		"lit-html": "^1.3.0",
-		"tslib": "^2.3.0"
+		"tslib": "^2.3.0",
+		"@floating-ui/dom": "^0.1.7",
+		"@floating-ui/core": "^0.2.1"
 	},
 	"devDependencies": {
 		"@vonage/vvd-typography": "2.22.1",
