--- a/.github/workflows/project-automations.yml
+++ b/.github/workflows/project-automations.yml
@@ -27,7 +27,7 @@ jobs:
     if: github.event_name == 'issues' && github.event.action == 'opened'
     steps:
       - name: Move issue to ${{ env.no_status }}
-        uses: leonsteinhaeuser/project-beta-automations@v1.0.2
+        uses: leonsteinhaeuser/project-beta-automations@v1.0.3
         with:
           gh_token: ${{ secrets.VNG_VVD_PAT }}
           organization: vonage
@@ -35,12 +35,12 @@ jobs:
           resource_node_id: ${{ github.event.issue.node_id }}
           status_value: ${{ env.no_status }}
 
-  pr_opened_review_requested:
+  pr_draft:
     runs-on: ubuntu-latest
     if: github.event_name == 'pull_request' && github.event.pull_request.draft == true && github.event.action == 'opened' || github.event.action == 'converted_to_draft'
     steps:
       - name: Move PR to ${{ env.in_progress }}
-        uses: leonsteinhaeuser/project-beta-automations@v1.0.2
+        uses: leonsteinhaeuser/project-beta-automations@v1.0.3
         with:
           gh_token: ${{ secrets.VNG_VVD_PAT }}
           organization: vonage
@@ -53,7 +53,7 @@ jobs:
     if: github.event_name == 'pull_request' && github.event.pull_request.draft == false && github.event.action == 'opened' || github.event.action == 'review_requested' || github.event.action == 'ready_for_review'
     steps:
       - name: Move PR to ${{ env.needs_review }}
-        uses: leonsteinhaeuser/project-beta-automations@v1.0.2
+        uses: leonsteinhaeuser/project-beta-automations@v1.0.3
         with:
           gh_token: ${{ secrets.VNG_VVD_PAT }}
           organization: vonage
