--- a/components/tooltip/package.json
+++ b/components/tooltip/package.json
@@ -30,6 +30,7 @@
 		"@vonage/vvd-core": "2.25.3",
 		"@vonage/vvd-foundation": "2.25.3",
 		"@vonage/vwc-icon-button": "2.25.3",
+		"@vonage/vwc-popup": "2.25.3",
 		"lit-element": "^2.4.0",
 		"lit-html": "^1.3.0",
 		"tslib": "^2.3.0"
