--- a/components/top-app-bar-fixed/package.json
+++ b/components/top-app-bar-fixed/package.json
@@ -27,6 +27,7 @@
 		"url": "https://github.com/Vonage/vivid/issues"
 	},
 	"dependencies": {
+		"@material/mwc-base": "^0.22.1",
 		"@material/mwc-top-app-bar": "^0.22.1",
 		"@material/mwc-top-app-bar-fixed": "^0.22.1",
 		"@vonage/vvd-core": "2.25.7",
