--- a/common/design-tokens/package.json
+++ b/common/design-tokens/package.json
@@ -28,6 +28,7 @@
 		"@vonage/vvd-design-tokens-properties": "0.9.0",
 		"lodash": "^4.17.21",
 		"ramda": "^0.27.1",
-		"style-dictionary": "^3.0.1"
+		"style-dictionary": "^3.0.1",
+		"remove-dir-safe": "^2.0.0"
 	}
 }
