--- a/components/empty-state/package.json
+++ b/components/empty-state/package.json
@@ -28,7 +28,8 @@
 		"@vonage/vvd-core": "2.25.8",
 		"lit-element": "^2.4.0",
 		"lit-html": "^1.3.0",
-		"tslib": "^2.3.0"
+		"tslib": "^2.3.0",
+		"@vonage/vwc-icon": "2.25.8"
 	},
 	"devDependencies": {
 		"@vonage/vvd-design-tokens": "2.25.8",
