--- a/components/file-picker/package.json
+++ b/components/file-picker/package.json
@@ -29,8 +29,7 @@
 		"@vonage/vvd-core": "2.25.8",
 		"@vonage/vvd-style-coupling": "2.25.8",
 		"@vonage/vwc-badge": "2.25.8",
-		"@vonage/vwc-button": "2.25.8",
-		"@vonage/vwc-icon": "2.25.8",
+		"@vonage/vwc-helper-message": "2.25.8",
 		"lit-element": "^2.4.0",
 		"tslib": "^2.3.0"
 	},
