--- a/components/layout/package.json
+++ b/components/layout/package.json
@@ -30,7 +30,8 @@
 	"dependencies": {
 		"@vonage/vvd-foundation": "2.25.8",
 		"lit-element": "^2.4.0",
-		"tslib": "^2.3.0"
+		"tslib": "^2.3.0",
+		"lit-html": "^1.3.0"
 	},
 	"devDependencies": {
 		"@vonage/vvd-umbrella": "2.25.8",
