--- a/components/switch/package.json
+++ b/components/switch/package.json
@@ -33,7 +33,8 @@
 		"@vonage/vvd-foundation": "2.25.8",
 		"@vonage/vvd-style-coupling": "2.25.8",
 		"lit-element": "^2.4.0",
-		"tslib": "^2.3.0"
+		"tslib": "^2.3.0",
+		"lit-html": "^1.3.0"
 	},
 	"devDependencies": {
 		"@vonage/vvd-design-tokens": "2.25.8",
