--- a/components/tags/package.json
+++ b/components/tags/package.json
@@ -29,6 +29,7 @@
 		"@vonage/vvd-foundation": "2.25.8",
 		"@vonage/vvd-typography": "2.25.8",
 		"@vonage/vwc-icon": "2.25.8",
+		"@vonage/vvd-core": "2.25.8",
 		"lit-element": "^2.4.0",
 		"lit-html": "^1.3.0",
 		"tslib": "^2.3.0"
