--- a/package.json
+++ b/package.json
@@ -71,6 +71,8 @@
 		"@typescript-eslint/parser": "^5.1.0",
 		"@vonage/monowatch": "^0.0.7",
 		"@whitespace/storybook-addon-html": "^5.0.0",
+		"@floating-ui/core": "^0.2.1",
+		"@floating-ui/dom": "^0.1.7",
 		"api-viewer-element": "^0.5.0",
 		"chai": "^4.3.4",
 		"chai-a11y-axe": "^1.3.1",
