--- a/components/breadcrumb-item/package.json
+++ b/components/breadcrumb-item/package.json
@@ -25,8 +25,7 @@
 		"url": "https://github.com/Vonage/vivid/issues"
 	},
 	"dependencies": {
-		"@vonage/vvd-foundation": "^2.26.0",
-		"lit-element": "^2.4.0",
+		"@vonage/vivid": "^3.0.0-next.3",
 		"tslib": "^2.3.0"
 	},
 	"devDependencies": {
