--- a/components/breadcrumb/package.json
+++ b/components/breadcrumb/package.json
@@ -26,6 +26,8 @@
 	},
 	"dependencies": {
 		"@vonage/vivid": "^3.0.0-next.3",
+		"@vonage/vvd-core": "2.26.0",
+		"@vonage/vwc-icon": "2.26.0",
 		"tslib": "^2.3.0"
 	},
 	"devDependencies": {
